<resources>
    <string name="app_name">物品管理</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Stuff manager</string>
    <string name="nav_header_subtitle">Chemistry College of PKU</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_add">Add Recode</string>
    <string name="menu_search">Search</string>
    <string name="menu_change_password">Change Password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username">name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_search1">Search</string>
    <string name="menu_detail">详情</string>
    <string name="search_key">可以搜索任意字段</string>
    <string name="menu_search_history">搜索历史：</string>

</resources>