<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.stuff.manage.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_add"
        android:name="com.stuff.manage.ui.add.AddFragment"
        android:label="@string/menu_add"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.stuff.manage.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_admin"
        android:name="com.stuff.manage.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_slideshow" />
</navigation>